--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ mysqlclient = "^2.0.1"
 django-extensions = "^3.0.8"
 dj_database_url = "^0.5.0"
 django-dotenv = "^1.4.2"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.18.1"
