--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-extensions = "^3.0.8"
 dj_database_url = "^0.5.0"
 django-dotenv = "^1.4.2"
 gunicorn = "^20.0.4"
+dj_static = "^0.0.6"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.18.1"
